--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 <body>
-  
+    <div class="id">
+      <img src="./photoSite.jpg" alt="" class="id__photo">
+      <div class="id__gpeContact">
+        <div class="id__gpeContact__gpeName">
+          <h1 class="id__name">Maxime Schmider</h1>
+          <p class="id__title">Front-end Dev</p>
+        </div>
+        <div class="id__gpeContact__infos">
+          <p class="id__email">schmidermaxime@protonmail.com</p>
+          <p class="id__tel">+33663800473</p>
+        </div>
+      </div>
+      <p class="id__summary">Self-taught developper, willing to become the better everyday</p>
+      <p class="id__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium sint voluptatum, nisi quo sequi modi. Nam, illum dolorum, temporibus ab accusantium modi natus id hic, officiis adipisci tempore aut.</p>
+    </div>
 </body>
 </html>
