--- a/index.html
+++ b/index.html
@@ -5,24 +5,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 <body>
     <div class="id">
       <img src="./photoSite.jpg" alt="" class="id__photo">
-      <div class="id__gpeContact">
-        <div class="id__gpeContact__gpeName">
-          <h1 class="id__name">Maxime Schmider</h1>
-          <p class="id__title">Front-end Dev</p>
+      <div class="id__gpeTexte">
+
+        <div class="id__gpeContact">
+          <div class="id__gpeContact__gpeName">
+            <h1 class="id__name">Maxime Schmider</h1>
+            <p class="id__title">Front-end Dev</p>
+          </div>
+          <div class="id__gpeContact__infos">
+            <div class="id__email"><i class="fas fa-envelope"></i>  schmidermaxime@protonmail.com</div>
+            <div class="id__tel"><i class="fas fa-phone"></i>  +33663800473</div>
+          </div>
         </div>
-        <div class="id__gpeContact__infos">
-          <p class="id__email">schmidermaxime@protonmail.com</p>
-          <p class="id__tel">+33663800473</p>
-        </div>
+        <p class="id__summary">Self-taught developper, willing to become the better everyday</p>
+        <p class="id__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium sint voluptatum, nisi quo sequi modi. Nam, illum dolorum, temporibus ab accusantium modi natus id hic, officiis adipisci tempore aut.</p>
       </div>
-      <p class="id__summary">Self-taught developper, willing to become the better everyday</p>
-      <p class="id__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium sint voluptatum, nisi quo sequi modi. Nam, illum dolorum, temporibus ab accusantium modi natus id hic, officiis adipisci tempore aut.</p>
     </div>
 </body>
 </html>
