fini  partie gauche

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 <body>
-    <div class="id">
+    <div class="group id">
       <img src="./photoSite.jpg" alt="" class="id__photo">
       <div class="id__gpeTexte">
 
@@ -28,5 +28,75 @@
         <p class="id__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium sint voluptatum, nisi quo sequi modi. Nam, illum dolorum, temporibus ab accusantium modi natus id hic, officiis adipisci tempore aut.</p>
       </div>
     </div>
-</body>
-</html>
+
+    <div class="leftDisplay">
+
+      <div class="group skills">
+        <h2>FRONT END</h2>
+      <ul class="skills__list">
+        <li class="skills__item">
+          <p class="skills_name">HTML</p>
+          <div class="skills__total">
+            <div class="skills__current skills__current__html"></div>
+          </div>
+        </li>
+        <li class="skills__item">
+          <p class="skills_name">CSS/SASS</p>
+          <div class="skills__total">
+            <div class="skills__current skills__current__css"></div>
+          </div>
+        </li>
+        <li class="skills__item">
+          <p class="skills_name">JavaScript</p>
+          <div class="skills__total">
+            <div class="skills__current skills__current__js"></div>
+          </div>
+        </li>
+        <li class="skills__item">
+          <p class="skills_name">VueJS</p>
+          <div class="skills__total">
+            <div class="skills__current skills__current__vue"></div>
+          </div>
+        </li>
+        <li class="skills__item">
+          <p class="skills_name">Figma</p>
+          <div class="skills__total">
+            <div class="skills__current skills__current__figma"></div>
+          </div>
+        </li>
+        <li class="skills__item">
+          <p class="skills_name">Bootstrap</p>
+          <div class="skills__total">
+            <div class="skills__current skills__current__bs"></div>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="group hobbies">
+      <h3>Hobbies</h3>
+      <div class="hobbies__gpe">
+        <div class="hobbies__imgContainer">
+          <img src="./cyclist-riding-bike-sunset-mountain-road.jpg" alt="" class="hobbies__img">
+        </div>
+        <p class="hobbies__text">Cycling</p>
+        <p class="hobbies__description">Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="hobbies__gpe">
+        <div class="hobbies__imgContainer">
+          <img src="./voyage.jpg" alt="" class="hobbies__img">
+        </div>
+        <p class="hobbies__text">Travel</p>
+        <p class="hobbies__description">Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="hobbies__gpe">
+        <div class="hobbies__imgContainer">
+          <img src="./linguistique.jpg" alt="" class="hobbies__img">
+        </div>
+        <p class="hobbies__text">Linguistics</p>
+        <p class="hobbies__description">Lorem ipsum dolor sit amet.</p>
+      </div>
+    </div>
+  </div>
+  </body>
+  </html>
